--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,9 +7,11 @@
       <h3 class="salute pb-0 my-0">Hi!, I'm</h3>
       <h2 class="name py-0 my-0">Johan Daza</h2>
       <p class="description">
-        I am a developer and media editor from Colombia. I
-        <i class="fa fa-heart icon"></i> Cine and Videogames, interested in the
-        frontend spectrum and working with positive people.
+        I am a developer and media editor from Colombia. I ❤️ Cine and
+        Videogames, interested in the frontend spectrum and working with
+        positive people. I have worked for Torolabs (creating physics and
+        chemistry simulators 🤖 for CloudLabs using Unity 🎮) and I am currently
+        working as frontend at Codepels 😁.
       </p>
     </div>
     <div class="col-sm-11 col-md-6 section">
@@ -33,7 +35,7 @@
               <div class="content">
                 <span class="stars"></span>
                 <p class="java">
-                  HTML CSS Javascript Angular VueJS Typescript Bootstrap
+                  HTML CSS Javascript Angular Ionic Typescript RxJS
                 </p>
               </div>
             </div>
@@ -44,6 +46,25 @@
         </div>
       </div>
     </div>
+
+    <div class="col-sm-10 col-md-10 skills section">
+      <div class="body">
+        <div class="container">
+          <div class="card">
+            <div class="face face1">
+              <div class="content">
+                <span class="stars"></span>
+                <p class="java">Java Kotlin Springboot sql</p>
+              </div>
+            </div>
+            <div class="face face2">
+              <h2>Backend (learning)</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="col-sm-10 col-md-10 skills section">
       <div class="body">
         <div class="container">
@@ -69,7 +90,7 @@
               <div class="content">
                 <span class="stars"></span>
                 <p class="java">
-                  VS Code - Terminal - Git - Jira - Adobe Premiere - Unity 2020
+                  VS Code - Terminal - Git - Jira - Adobe Premiere - Unity 2022
                 </p>
               </div>
             </div>
@@ -86,7 +107,8 @@
         <br />
         <p class="description pb-3 px-3">
           If you have questions, don't hesitate to write me, I'm interested in
-          freelance Frontend projects or short projects ;D.
+          freelance Frontend projects or short projects ;D. Update: I am working
+          Yeiiii but you can contact me anyway
         </p>
       </div>
     </div>
