--- a/src/app/oriun/oriun.component.html
+++ b/src/app/oriun/oriun.component.html
@@ -11,8 +11,8 @@
         </p>
         <h4 class="technologies my-0">Technologies:</h4>
         <p class="tech">HTML - CSS - JS - VueJS.</p>
-        <a class="link" href="https://oriun.herokuapp.com/"
-          ><i class="fa fa-arrow-right"></i> to OriUN</a
+        <a class="link" href=""
+          ><i class="fa fa-arrow-right"></i> in maintenance</a
         >
       </div>
       <div class="col-md-6 col-11">
