--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -17,10 +17,10 @@
     <div class="col-sm-11 col-md-6 section">
       <a href="#">
         <div class="image-wrapper">
-          <img class="image-1" src="../assets/fotos.png" />
-          <img class="image-2" src="../assets/fotos.png" />
-          <img class="image-3" src="../assets/fotos.png" />
-          <img class="image-4" src="../assets/fotos.png" />
+          <img class="image-1" src="assets/fotos.png" />
+          <img class="image-2" src="assets/fotos.png" />
+          <img class="image-3" src="assets/fotos.png" />
+          <img class="image-4" src="assets/fotos.png" />
         </div>
       </a>
     </div>
