--- a/src/app/memophoto/memophoto.component.html
+++ b/src/app/memophoto/memophoto.component.html
@@ -15,7 +15,7 @@
         <a
           class="link justify-content-center"
           href="https://t.co/EXZHE4TNsY?amp=1"
-          ><img src="../assets/play.png" alt=""
+          ><img src="assets/play.png" alt=""
         /></a>
       </div>
       <div class="col-md-6 col-11 px-5">
@@ -23,38 +23,9 @@
           href="https://t.co/EXZHE4TNsY?amp=1"
           class="justify-content-center align-items-center"
         >
-          <img src="../assets/memologo.png" alt="" class="iconmemo" />
+          <img src="assets/memologo.png" alt="" class="iconmemo" />
         </a>
       </div>
-      <!-- <div class="col-md-6 col-11 ">
-        <div id="carouselExampleControls" class="carousel slide carsli px-1 px-md-5" data-bs-ride="carousel">
-          <div class="carousel-inner bord">
-            <div class="carousel-item active">
-              <img src="../assets/memo1.webp" class="d-block w-10" alt="...1">
-            </div>
-            <div class="carousel-item">
-              <img src="../assets/memo1.webp" class="d-block w-10" alt="...2">
-            </div>
-            <div class="carousel-item">
-              <img src="../assets/memo1.webp" class="d-block w-10" alt="..5.">
-            </div>
-            <div class="carousel-item">
-              <img src="../assets/memo1.webp" class="d-block w-10" alt="..5.">
-            </div>
-          </div>
-          <button class="carousel-control-prev arrow" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next arrow" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-
-      </div> -->
     </div>
   </div>
 </div>
