--- a/src/app/oriun/oriun.component.html
+++ b/src/app/oriun/oriun.component.html
@@ -23,16 +23,16 @@
         >
           <div class="carousel-inner bord">
             <div class="carousel-item active">
-              <img src="../assets/1.png" class="d-block w-100" alt="...1" />
+              <img src="assets/1.png" class="d-block w-100" alt="...1" />
             </div>
             <div class="carousel-item">
-              <img src="../assets/2.png" class="d-block w-100" alt="...2" />
+              <img src="assets/2.png" class="d-block w-100" alt="...2" />
             </div>
             <div class="carousel-item">
-              <img src="../assets/3.png" class="d-block w-100" alt="..5." />
+              <img src="assets/3.png" class="d-block w-100" alt="..5." />
             </div>
             <div class="carousel-item">
-              <img src="../assets/4.png" class="d-block w-100" alt="..5." />
+              <img src="assets/4.png" class="d-block w-100" alt="..5." />
             </div>
           </div>
           <button
