add youtube logo

--- a/src/app/presentation/presentation.component.html
+++ b/src/app/presentation/presentation.component.html
@@ -10,6 +10,12 @@
           <a class="networks git" href="https://github.com/josteda99"
             ><fa-icon [icon]="faGithub"></fa-icon
           ></a>
+          <a
+            class="networks youtube"
+            href="https://www.youtube.com/channel/UCau8zPcEctvGTFzJ-qf8pwg"
+          >
+            <fa-icon [icon]="faYoutube"></fa-icon
+          ></a>
           <a class="networks twitter" href="https://twitter.com/josteda99"
             ><fa-icon [icon]="faTwitter"></fa-icon
           ></a>
