add all gallery funcioanlity desktop

--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -2,11 +2,11 @@
   <div class="horizontal-scroll-wrapper">
     <app-image-velocity
       [imageInfo]="images[0]"
-      [velocities]="'faster'"
+      [velocities]="'faster1'"
     ></app-image-velocity>
     <app-image-velocity
       [imageInfo]="images[1]"
-      [velocities]="'slower vertical'"
+      [velocities]="'slower'"
     ></app-image-velocity>
     <app-image-velocity
       [imageInfo]="images[2]"
@@ -32,7 +32,7 @@
     ></app-image-velocity>
     <app-image-velocity
       [imageInfo]="images[9]"
-      [velocities]="'slower last'"
+      [velocities]="'slower2'"
     ></app-image-velocity>
   </div>
   <p class="scroll-info">Dale pa' bajo...</p>
@@ -55,8 +55,9 @@
       ></a>
       josteda99@gmail.com
     </div>
-    <p>
-      Inspirado en: <a href="https://codepen.io/pehaa/pen/zYxbxQg">Paulina H</a>
-    </p>
+    <span>
+      Inspirado en layout de:
+      <a href="https://codepen.io/pehaa/pen/zYxbxQg">Paulina H</a>
+    </span>
   </header>
 </div>
