--- a/src/app/image-velocity/image-velocity.component.html
+++ b/src/app/image-velocity/image-velocity.component.html
@@ -1,9 +1,5 @@
-<div class="img-wrapper" [ngClass]="velocities">
-  <a
-    href="https://altphotos.com/photo/swans-and-ducks-swimming-in-a-river-264/"
-    target="_blank"
-    rel="noopener"
-  >
+<div class="img-wrapper" [ngClass]="velocities" (click)="openDialog()">
+  <a target="_blank" rel="noopener">
     <img [src]="imageInfo.src" [alt]="imageInfo.alt" />
   </a>
 </div>
