--- a/src/app/gallery/gallery.component.scss
+++ b/src/app/gallery/gallery.component.scss
@@ -74,3 +74,9 @@ p {
   font-size: 30px;
   padding-right: 10px;
 }
+
+.simple-img {
+  width: 90vw;
+  border: 12px solid #efecdb;
+  box-shadow: 0 10px 50px #5f2f1182;
+}
