--- a/src/app/memophoto/memophoto.component.html
+++ b/src/app/memophoto/memophoto.component.html
@@ -15,6 +15,7 @@
         <a
           class="link justify-content-center"
           href="https://t.co/EXZHE4TNsY?amp=1"
+          target="_blank"
           ><img src="assets/play.png" alt=""
         /></a>
       </div>
@@ -22,6 +23,7 @@
         <a
           href="https://t.co/EXZHE4TNsY?amp=1"
           class="justify-content-center align-items-center"
+          target="_blank"
         >
           <img src="assets/memologo.png" alt="" class="iconmemo" />
         </a>
