--- a/src/app/presentation/presentation.component.html
+++ b/src/app/presentation/presentation.component.html
@@ -7,33 +7,49 @@
         <div class="col-auto">
           <h2 class="hi mb-0">Hello there, I'm</h2>
           <h1 class="title pt-0">Johan Daza</h1>
-          <a class="networks git" href="https://github.com/josteda99"
+          <a
+            class="networks git"
+            href="https://github.com/josteda99"
+            target="_blank"
+            target="_blank"
             ><fa-icon [icon]="faGithub"></fa-icon
           ></a>
           <a
             class="networks youtube"
             href="https://www.youtube.com/channel/UCau8zPcEctvGTFzJ-qf8pwg"
+            target="_blank"
+            target="_blank"
           >
             <fa-icon [icon]="faYoutube"></fa-icon
           ></a>
-          <a class="networks twitter" href="https://twitter.com/josteda99"
+          <a
+            class="networks twitter"
+            href="https://twitter.com/josteda99"
+            target="_blank"
+            target="_blank"
             ><fa-icon [icon]="faTwitter"></fa-icon
           ></a>
           <a
             class="networks linkedin"
             href="https://www.linkedin.com/in/johan-d-4103a5121/"
+            target="_blank"
+            target="_blank"
           >
             <fa-icon [icon]="faLinkedin"></fa-icon
           ></a>
           <a
             class="networks instagram"
             href="https://www.instagram.com/latucoh/?hl=es-la"
+            target="_blank"
+            target="_blank"
           >
             <fa-icon [icon]="faInstagram"></fa-icon
           ></a>
           <a
             class="networks behance"
             href="https://www.behance.net/johandaza?tracking_source=search_projects_recommended%7CjohanDaza"
+            target="_blank"
+            target="_blank"
           >
             <fa-icon [icon]="faBehance"></fa-icon
           ></a>
