--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -35,7 +35,7 @@
       [velocities]="'slower2'"
     ></app-image-velocity>
   </div>
-  <p class="scroll-info">Dale pa' bajo...</p>
+  <p class="scroll-info">Scroll hacia abajo...</p>
   <header>
     <p>Johan Daza</p>
     <h2 class="m-0">Portafolio</h2>
