--- a/src/app/presentation/presentation.component.html
+++ b/src/app/presentation/presentation.component.html
@@ -5,8 +5,9 @@
     <div class="container">
       <div class="row vh-100 justify-content-center align-items-center">
         <div class="col-auto">
-          <h2 class="hi mb-0">Hello there, I'm</h2>
+          <h2 class="hi">Hello there, I'm</h2>
           <h1 class="title pt-0">Johan Daza</h1>
+
           <a
             class="networks git"
             href="https://github.com/josteda99"
