fix padding title

--- a/src/app/presentation/presentation.component.html
+++ b/src/app/presentation/presentation.component.html
@@ -6,7 +6,7 @@
       <div class="row vh-100 justify-content-center align-items-center">
         <div class="col-auto">
           <h2 class="hi">Hello there, I'm</h2>
-          <h1 class="title pt-0">Johan Daza</h1>
+          <h1 class="title mt-3">Johan Daza</h1>
 
           <a
             class="networks git"
