--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -36,24 +36,22 @@
         </div>
         <div class="col-md-6 col-sm-12 px-0 work">
           <div class="row spe mx-0">
-            <a (click)="showAnimation('oriun')" class="col px-0 first">
-              <h3 class="pro-info tit">OriUN</h3>
+            <a (click)="showAnimation('videogames')" class="col px-0 first">
+              <h3 class="pro-info tit">Videogames</h3>
               <p class="pro-info des">
-                A web application to create and manage sporting events
+                Some videogames made with love and Unity
               </p>
             </a>
-            <a (click)="showAnimation('memo')" class="col px-0 second">
-              <h3 class="pro-info tit">Memophoto</h3>
-              <p class="pro-info des">
-                Game that helps to develop photographic memory
-              </p>
+            <a (click)="showAnimation('apps')" class="col px-0 second">
+              <h3 class="pro-info tit">Apps</h3>
+              <p class="pro-info des">Some web/mobile/desktop Applications</p>
             </a>
           </div>
           <div class="row spe mx-0">
-            <a (click)="showAnimation('rass')" class="col px-0 three">
-              <h3 class="pro-info tit">Rassking</h3>
+            <a routerLink="/projects/gallery" class="col px-0 three">
+              <h3 class="pro-info tit">Photography</h3>
               <p class="pro-info des">
-                Platformer game to break own records with house music
+                Not everything is programming... check my gallery 😉
               </p>
             </a>
             <a (click)="showAnimation('about')" class="col px-0 last">
