--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -37,7 +37,7 @@
   </div>
   <p class="scroll-info">Scroll hacia abajo...</p>
   <header>
-    <p>Johan Daza</p>
+    <p class="name" routerLink="/projects/about">Johan Daza</p>
     <h2 class="m-0">Portafolio</h2>
     <p>Contáctame</p>
     <div class="d-flex align-items-center">
@@ -68,7 +68,7 @@
 
 <ng-template #showMobileVersion>
   <div class="m-5 pt-3">
-    <p>Johan Daza</p>
+    <p class="name" routerLink="/projects/about">Johan Daza</p>
     <h2 class="m-0">Portafolio</h2>
     <p>Contáctame</p>
     <div class="d-flex align-items-center">
