add redirect to full galery

--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -63,6 +63,7 @@
         >Paulina H</a
       >
     </span>
+    <p><a href="/projects/full-gallery">Mas fotos aqui</a></p>
   </header>
 </div>
 
@@ -94,6 +95,7 @@
         >Paulina H</a
       >
     </span>
+    <a href="/projects/full-gallery">Mas fotos aqui</a>
   </div>
 
   <div class="w-full d-grid justify-content-center">
