--- a/src/app/full-gallery/full-gallery.component.html
+++ b/src/app/full-gallery/full-gallery.component.html
@@ -1,3 +1,34 @@
+<div class="container-fluid">
+  <div class="row">
+    <div class="col">
+      <div class="d-flex justify-content-between">
+        <a [routerLink]="['']" class="titlea">
+          <h2 class="title px-4 pt-4 py-0 mb-0">Johan Daza</h2>
+          <h3 class="subtitle px-4 pt-0 py-4">Fotos</h3>
+        </a>
+        <div class="d-flex align-items-center">
+          <p class="m-3">Contáctame</p>
+          <a
+            class="networks instagram"
+            href="https://www.instagram.com/latucoh/?hl=es-la"
+            target="_blank"
+          >
+            <fa-icon [icon]="faInstagram"></fa-icon
+          ></a>
+          <a
+            class="networks youtube"
+            href="https://www.youtube.com/channel/UCau8zPcEctvGTFzJ-qf8pwg"
+            target="_blank"
+          >
+            <fa-icon [icon]="faYoutube"></fa-icon
+          ></a>
+          <a (click)="copyEmailClipboard()">josteda99@gmail.com</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="work">
   <div class="masonry-demo">
     <ngx-masonry
@@ -9,8 +40,9 @@
         ngxMasonryItem
         [prepend]="true"
         *ngFor="let image of images; index as idx"
-        style="width: 30%"
-        class="my-2 shadow-card"
+        style="width: 32%"
+        class="my-2 shadow-card photo"
+        (click)="openDialog(image)"
       >
         <img [src]="image.src" width="100%" />
       </div>
