--- a/src/app/full-gallery/full-gallery.component.scss
+++ b/src/app/full-gallery/full-gallery.component.scss
@@ -1,3 +1,23 @@
+.container-fluid {
+  background-color: #efecdb;
+  height: 100px;
+  width: 100%;
+}
+
+.titlea {
+  text-decoration: none;
+
+  .title {
+    color: #5d4037;
+    font-size: 30px;
+  }
+
+  .subtitle {
+    color: #5d4037;
+    font-size: 15px;
+  }
+}
+
 .masonry-demo {
   height: auto;
   min-height: 100vh;
@@ -5,7 +25,18 @@
   padding-left: 10px;
   background-color: #efecdb;
 }
-.shadow-card {
-  border: 7px solid #efecdb;
-  box-shadow: 0 5px 30px #5f2f1182;
+
+.information {
+  height: 300px;
+  background-color: red;
+}
+.networks {
+  color: #5d4037;
+
+  font-size: 30px;
+  padding-right: 10px;
+}
+a,
+.photo {
+  cursor: pointer;
 }
