--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -55,7 +55,9 @@
       >
         <fa-icon [icon]="faYoutube"></fa-icon
       ></a>
-      josteda99@gmail.com
+      <a class="email-label" (click)="copyEmailClipboard()"
+        >josteda99@gmail.com</a
+      >
     </div>
     <span>
       Inspirado en layout de:
@@ -63,7 +65,7 @@
         >Paulina H</a
       >
     </span>
-    <p><a href="/projects/full-gallery">Mas fotos aqui</a></p>
+    <p><a routerLink="/projects/full-gallery">Mas fotos aqui</a></p>
   </header>
 </div>
 
@@ -87,7 +89,9 @@
       >
         <fa-icon [icon]="faYoutube"></fa-icon
       ></a>
-      josteda99@gmail.com
+      <a class="email-label" (click)="copyEmailClipboard()"
+        >josteda99@gmail.com</a
+      >
     </div>
     <span>
       Inspirado en layout de:
@@ -95,7 +99,7 @@
         >Paulina H</a
       >
     </span>
-    <a href="/projects/full-gallery">Mas fotos aqui</a>
+    <a routerLink="/projects/full-gallery">Mas fotos aqui</a>
   </div>
 
   <div class="w-full d-grid justify-content-center">
