--- a/src/app/full-gallery/full-gallery.component.scss
+++ b/src/app/full-gallery/full-gallery.component.scss
@@ -37,9 +37,14 @@
   padding-right: 10px;
 }
 a,
-.photo {
+.photo,
+.email {
   cursor: pointer;
 }
 .masonry-item {
   transition: top 1s ease-in-out, left 1s ease-in-out;
+}
+.header {
+  width: 100%;
+  background-color: #efecdb;
 }
