--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -21,10 +21,8 @@
       <a class="networks youtube" href="https://www.youtube.com/channel/UCau8zPcEctvGTFzJ-qf8pwg" target="_blank"> <fa-icon [icon]="faYoutube"></fa-icon></a>
       <a class="email-label" (click)="copyEmailClipboard()">josteda99@gmail.com</a>
     </div>
-    <span>
-      Inspirado en layout de:
-      <a href="https://codepen.io/pehaa/pen/zYxbxQg" target="_blank">Paulina H</a>
-    </span>
+
+    <!-- Inspirado en layout de: https://codepen.io/pehaa/pen/zYxbxQg -->
     <p><a routerLink="/projects/full-gallery">Mas fotos aqui</a></p>
   </header>
 </div>
@@ -39,10 +37,7 @@
       <a class="networks youtube" href="https://www.youtube.com/channel/UCau8zPcEctvGTFzJ-qf8pwg" target="_blank"> <fa-icon [icon]="faYoutube"></fa-icon></a>
       <a class="email-label" (click)="copyEmailClipboard()">josteda99@gmail.com</a>
     </div>
-    <span>
-      Inspirado en layout de:
-      <a href="https://codepen.io/pehaa/pen/zYxbxQg" target="_blank">Paulina H</a>
-    </span>
+    <!-- Inspirado en layout de: https://codepen.io/pehaa/pen/zYxbxQg -->
     <p>
       <a routerLink="/projects/full-gallery">Mas fotos aqui</a>
     </p>
